Aggiunto il file per il css.

--- a/allenatore.html
+++ b/allenatore.html
@@ -7,7 +7,9 @@
         di pallavolo maschile 2022. Nel sito sono descritti i giocatori, 
         l'allenatore e alcune regole e curiosità come il fairplay."/>
     <meta name="keywords" content="Ferdinando de Giorgi, pallavolo, maschile, Italia"/>
-    <meta name="author" content="Luca Pierobon"/> 
+    <meta name="author" content="Luca Pierobon"/>
+    <link rel="stylesheet" href="style.css" media="handled, screen"/>
+    <link rel="short icon" type="image/png" href="images/favicon.ico"/>
 </head>
 <body>
     <header>
