--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         l'allenatore e alcune regole e curiosità come il fairplay."/>
     <meta name="keywords" content="pallavolo, volley, maschile, Italia, campionato, mondiale, Simone Gianelli, 
         Fabio Balaso, Gianluca Galassi"/>
-    <meta name="author" content="Luca Pierobon"/>   
+    <meta name="author" content="Luca Pierobon"/>
+    <link rel="stylesheet" href="style.css" media="handled, screen"/>
+    <link rel="short icon" type="image/png" href="images/favicon.ico"/>
 </head>
 
 <body>
@@ -75,10 +77,9 @@
         </ul>
     </main>
     <footer>
-        <img src="images/valid-xhtml10.png" alt="W3C XHTML 1.0">
+    <img src="images/valid-xhtml10.png" alt="W3C XHTML 1.0">
         <em>Luca Pierobon & Federazione Italiana Pallavolo - All rights reserved</em>
         <img src="images/vcss-blue.gif" alt="W3C CSS">
     </footer>
 </body>
-
 </html>
