--- a/fairplay.html
+++ b/fairplay.html
@@ -8,7 +8,9 @@
         l'allenatore e alcune regole e curiosità come il fairplay."/>
     <meta name="keywords" content="pallavolo, maschile, Italia, campionato, mondiale, Simone Giannelli,
         Fabio Balaso, Gianluca Galassi, Lavia" />
-    <meta name="author" content="Luca Pierobon"/>   
+    <meta name="author" content="Luca Pierobon"/>
+    <link rel="stylesheet" href="style.css" media="handled, screen"/>
+    <link rel="short icon" type="image/png" href="images/favicon.ico"/>
 </head>
 <body>
     <header>
