Modifiche al CSS

--- a/allenatore.html
+++ b/allenatore.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <header>
-        <img src="images/logo_fipav.svg" alt="Federazione Italiana Pallavolo"/>
-        <h1>La pallavolo maschile italiana</h1>
+        <h1>Federazione Italiana Pallavolo</h1>
+        <h2>La pallavolo maschile italiana</h2>
     </header>
-    <nav>
+    <nav id="breadcrumb">
         <p>Ti trovi in: L'allenatore</p>
     </nav>
-    <nav id="allenatore">
+    <nav id="menu">
         <ul>            
             <li><a href="index.html"><span lang="en">Home</span></a></li>
             <li id="currentlink">L'allenatore</li>
