--- a/squadra.html
+++ b/squadra.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <img src="images/logo_fipav.svg" alt="Federazione Italiana Pallavolo"/>
-        <h1>La pallavolo maschile italiana</h1>
+        <h1>Federazione Italiana Pallavolo</h1>
+        <h2>La pallavolo maschile italiana</h2>
     </header>
     <nav id="breadcrumb">
         <p>Ti trovi in: La squadra</p>
