--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <header>
-        <img src="images/logo_fipav.svg" alt="Federazione Italiana Pallavolo"/>
-        <h1>La pallavolo maschile italiana</h1>
+        <h1>Federazione Italiana Pallavolo</h1>
+        <h2>La pallavolo maschile italiana</h2>
     </header>
     <nav id="breadcrumb">
         <p>Ti trovi in: <span lang="en">Home</span></p>
