--- a/allenatore.html
+++ b/allenatore.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <title>L'allenatore | Volley Tribute</title>
     <meta name="description" content="Questa pagina è dedicata al campionato mondiale 
         di pallavolo maschile 2022. Nel sito sono descritti i giocatori, 
-        l'allenatore e alcune regole e curiosità come il fairplay."/>
-    <meta name="keywords" content="Ferdinando de Giorgi, pallavolo, maschile, Italia"/>
-    <meta name="author" content="Luca Pierobon"/>
-    <link rel="stylesheet" href="style.css" media="handled, screen"/>
-    <link rel="short icon" type="image/png" href="images/favicon.ico"/>
+        l'allenatore e alcune regole e curiosità come il fairplay." />
+    <meta name="keywords" content="Ferdinando de Giorgi, pallavolo, maschile, Italia" />
+    <meta name="author" content="Luca Pierobon" />
+    <link rel="stylesheet" href="style.css" media="handled, screen" />
+    <link rel="icon" type="image/png" href="images/favicon.ico" />
 </head>
+
 <body>
     <header>
         <h1>Federazione Italiana Pallavolo</h1>
@@ -20,7 +22,7 @@
         <p>Ti trovi in: L'allenatore</p>
     </nav>
     <nav id="menu">
-        <ul>            
+        <ul>
             <li><a href="index.html"><span lang="en">Home</span></a></li>
             <li id="currentlink">L'allenatore</li>
             <li><a href="squadra.html">La squadra</a></li>
@@ -29,6 +31,7 @@
     </nav>
     <main>
         <h1>L'allenatore - Ferdinando de Giorgi</h1>
+        <img src="./images/degiorgi.jpg" alt="De Giorgi" />
         <p>Ferdinando De Giorgi, detto Fefè, è nato a Squinzano (LE) il 10 ottobre 1961. Terminata la
             carriera di pallavolista, più precisamente di palleggiatore, è diventato allenatore e
             attualmente è commissario tecnico della nazionale italiana.</p>
@@ -47,6 +50,10 @@
         <p>Dal 2018 al 2021 ha allenato la squadra italiana “Cucine Lube Civitanova”, ma nel suo
             curriculum vanta anche esperienze con squadre estere (è stato addirittura selezionato come
             allenatore della nazionale polacca nel 2017)</p>
+        <p>Dal 2021 allena l’Italia, portandola a vincere il titolo di <strong>campionessa europea</strong> e mondiale,
+            titolo che l’Italia aveva conquistato altre <strong>3 volte</strong>, proprio con la squadra in cui giocava
+            lo
+            stesso Fefè.</p>
     </main>
     <footer>
         <img src="images/valid-xhtml10.png" alt="W3C XHTML 1.0">
@@ -54,4 +61,5 @@
         <img src="images/vcss-blue.gif" alt="W3C CSS">
     </footer>
 </body>
+
 </html>
