--- a/fairplay.html
+++ b/fairplay.html
@@ -10,7 +10,7 @@
         Fabio Balaso, Gianluca Galassi, Lavia" />
     <meta name="author" content="Luca Pierobon"/>
     <link rel="stylesheet" href="style.css" media="handled, screen"/>
-    <link rel="short icon" type="image/png" href="images/favicon.ico"/>
+    <link rel="icon" type="image/png" href="images/favicon.ico"/>
 </head>
 <body>
     <header>
